# jax-transformer

./: .gitattributes  .gitignore  README.md  pyproject.toml  scale-factor-in-dot-attention-plots.ipynb  scale-factor-in-dot-attention.ipynb  setup.cfg
attention/: dotprod.py
bumblejax/model/: encoder.py
bumblejax/train/: collator.py  trainer.py
bumblejax/utils/: __init__.py
notebooks/: attention_plots.ipynb  train_transformer.ipynb  train_transformer_gpt2.ipynb
optimusjx/model/: __init__.py  attention.py  encoder.py  positional_encoding.py  transformer.py
optimusjx/train/: __init__.py  collator.py  trainer.py
optimusjx/utils/: __init__.py  mask.py
tests/: conftest.py  test_attention.py  test_encoder.py  test_mask.py
tests/attention/: test_dotprod.py
tests/model/: test_attention.py  test_encoder.py  test_positional_encoding.py  test_transformer.py
tests/train/: test_collator.py  test_trainer.py
tests/utils/: test_mask.py
wheeljax/model/: attention.py  encoder.py  transformer.py
wheeljax/train/: collator.py  trainer.py
