[metadata]
name = optimusjx
version = 0.0.1
author = Daniel Varoli
description = Jax implementation of the Transformer model.
# long_description = file: README.md
# long_description_content_type = text/markdown
url = https://github.com/djvaroli/optimusjx
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    jax~=0.4.22
    jaxlib~=0.4.22
    flax~=0.7.5

[options.packages.find]
include = optimusjx*

[options.extras_require]
dev = 
    pytest
    black
    isort