[metadata]
name = wheeljax
version = 0.0.1
author = Daniel Varoli
description = Jax implementation of the Transformer model.
url = https://github.com/djvaroli/wheeljax
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    jax~=0.4.18
    jaxlib~=0.4.18
    flax~=0.7.5
    rich
    matplotlib
    transformers
    torch
    datasets
    wandb

[options.packages.find]
include = wheeljax*

[options.extras_require]
dev = 
    pytest
    black
    isort